# my_bot

./: .gitignore  CMakeLists.txt  README.md  merge_boxes.py  package.xml
config/: lidar.config  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_robot.yaml  setup.rviz  twist_mux.yaml  view_bot_rviz.rviz
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robotcore.xacro
launch/: launch_robot.launch.py  launch_sim.launch.py  my_bot_launch.py
my_bot/: environment_speed_node.py  indicator_node.py  mqtt_hmi_bridge.py  patrol_node.py  test_indicators.py
test/: conftest.py  test_patrol_state_machine.py
worlds/: obstakels1.sdf  ziekenhuis.sdf  ziekenhuis_merged.sdf
