<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>1.0.0</version>
  <description>
    Navigatiemodule voor een zorginstellingrobot op de EZ-Wheel SWD basis.
    Bevat autonome waypoint-patrouille (Nav2), blokkade-afhandeling,
    sociale signalering (knipperlichten/buzzer) en een MQTT-brug naar de FT2J HMI.
  </description>
  <maintainer email="koen.pothof@improvia.nl">Koen Pothof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
